fix test of time award

--- a/src/pages/research/snp-haplotypes.astro
+++ b/src/pages/research/snp-haplotypes.astro
@@ -167,7 +167,10 @@ export const relevantPapers = publications.filter((paper) =>
     </div>
 
     <div>
-        <h3 class="text-2xl font-bold py-4">ESA 2021 Test-of-Time Award</h3>
+        <h3 class="text-2xl font-bold py-4">
+            20 Years of Haplotyping Test of ESA 2021 Test-of-Time Award Time
+            Award For Celera Paper
+        </h3>
         <p class="pb-8">
             The 30th Annual European Symposium on Algorithms awarded its 2021
             Test-of-Time Award to Sorin Istrail, professor of computational and
