learning. with Sissy part 1

--- a/src/pages/research/protein-folding.astro
+++ b/src/pages/research/protein-folding.astro
@@ -26,7 +26,7 @@ const relevantPapers = publications.filter((paper) =>
             title="1001 optimal PDB structure alignments: integer programming methods for finding the maximum contact map overlap"
             blurb="Protein structure comparison is a fundamental problem for structural genomics, with applications to drug design, fold prediction, protein clustering, and evolutionary studies. Despite its importance, there are very few rigorous methods and widely accepted similarity measures known for this problem. In this paper we describe the last few years of developments on the study of an emerging measure, the contact map overlap (CMO), for protein structure comparison. A contact map is a list of pairs of residues which lie in three-dimensional proximity in the protein's native fold."
         >
-            Protein structure comparison is a fundamental problem for structural
+            Protein structure comparison is a ** very ** fundamental problem for structural
             genomics, with applications to drug design, fold prediction, protein
             clustering, and evolutionary studies. Despite its importance, there
             are very few rigorous methods and widely accepted similarity
